@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020170731"
-#define public MagickPackageReleaseDate "snapshot-20170731"
+#define public MagickPackageVersionAddendum ".020170801"
+#define public MagickPackageReleaseDate "snapshot-20170801"
