@@ -35,6 +35,16 @@
 <div class="document">
 
 
+<p>2017-08-01  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/jpeg.c (RegisterJPEGImage): Add support for the
+SETJMP_IS_THREAD_SAFE preprocessor definition (already used by
+coders/png.c) to indicate if setjmp/longjmp are thread safe on
+this platform and that it is safe for multiple encoders/decoders
+to be active at one time.</li>
+</ul>
+</blockquote>
 <p>2017-07-31  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
